<?xml version="1.0"?>
<package format="3">
  <name>tf_to_odom</name>
  <version>0.0.0</version>
  <description>TF to Odometry Node</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>License Declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
